ADD 初期データ追加、登録用コード追加
